Thoughts on modules and lexical syntax.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,19 +1,19 @@
-* [lang] Add support for new lexical syntax.
-* [lang] Revise modules
+* [test] Test and fix handling of type vs. normal name.
+* [lang] Test and add support for new lexical syntax.
+* [lang] Propose new spec for modules
+ - Figure out how to handle private modules, such as Bit1 and Bit2XN
+
 * [test] Rename tests to match new spec, and clean up tests.
    typeof, var, let,
    func_bind
    proc_link, proc_exec
    poly_value, poly_apply
-
 * [prgm] Optimize Md5.cls function
   - change cls to use or(x << n, x >> (K - n))
   - change << and >> to take number of bits to shift instead of a single bit.
-
 * [prgm] Optimize the fble implementation of tictactoe
   - Using monadic operations where feasible?
 * [prgm] Implement game of life.
-
 * [clean] Tracking of time in the compiler is really messy
   Especially that we extract the pointer to the time field from NewBlock by
   assuming what NewBlock does. Figure out some way to clean this up.
@@ -23,7 +23,6 @@
   - md5 run on 6k file. ~7 minutes
   - tictactoe find best move for empty board. ~50 minutes
 * [clean] Factor out common code for thunks used by func, link, and exec.
-* [test] Test and fix handling of type vs. normal name.
 * [perf] figure out how to use 'perf' for profiling?
   perf record --call-graph dwarf [COMMAND]
   perf report -g --stdio
