--- a/langs/fble.txt
+++ b/langs/fble.txt
@@ -880,32 +880,40 @@ Prgm ::= Expr
 -------------------
 11.1 Lexical Syntax
 -------------------
-There are three categories of characters:
+We have the following categories of characters:
 1. whitespace: Any whitespace character, as traditionally classified.
-2. punctuation: Any of the following characters:
+2. The comment character '#'.
+3. punctuation: Any of the following characters:
   (){};,:?=.<>+*-!$@~&'\
-3. normal: any other character.
+4. normal: any other character.
+
+The lexical syntax is used to interpret a string of arbitrary characters as a
+sequence of punctuation characters and words.
+
+Whitespace is treated as a delimiter of words. The comment character and any
+following characters on the same line are treated as a delimiter of words.
+Whitespace and comments are otherwise ignored.
 
 A sequence of continuous normal characters is grouped together into a word. To
 include whitespace or punctuation in a word, an escape sequence can be used.
 
-Any single punctuation or whitespace character can be preceded with a
-backslash to treat it as a normal character. For example: Foo\,Bar is a 7
-character word where the fourth character in the word is a comma.
+Any single punctuation, whitespace character, or the comment character can be
+preceded with a backslash to treat it as a normal character. For example:
+Foo\,Bar is a 7 character word where the fourth character in the word is a
+comma.
 
 In addition, for convenience, the following escape sequences are supported as
 alternatives to whitespace characters:
   \n - A newline character.
 
-A sequence of characters in single quotes is treated as a sequence of normal
-characters, regardless of what class the characters come from. All escape
-sequences can be used in single quotes, but escape of punctuation and
+A sequence of characters surrounded by single quotes is treated as a sequence
+of normal characters, regardless of what class the characters come from. All
+escape sequences can be used in single quotes, but escape of punctuation and
 whitespace is not required. For example: 'Foo.Bar' is the same word as the
 previous example.
 
-TODO:
-* Is: Foo'.'Bar a single word or three words? That is, do single quotes
-  introduce a word delimiter?
+Single quotes act as word delimiters. For example, Foo'.'Bar is treated as
+three separate words: 'Foo', '.', and 'Bar', not as a single word 'Foo.Bar'.
 
 11.2 Reference
 --------------
