--- a/TODO.txt
+++ b/TODO.txt
@@ -1,15 +1,13 @@
+* [lang] Draft proper spec for string literals. Test and implement.
+
 * [prgm] TicTacToe cleanup
  - Switch to using shared modules.
  - Use monads, monoids, and maps and such to simplify ChooseBestMove.
  - Hook up to the 'Test' infrastructure (assuming the tests are fast enough to
    run).
-* [test] Test and fix handling of type vs. normal name.
- - Needs to be tested and fixed everywhere :(
- - Might not be possible, because that information isn't tracked in the kind
-   for a type variable.
-* [lang] Draft spec for string literals, test and implement.
-* [lang] Propose new spec for modules
- - Figure out how to handle private modules, such as Bit1 and Bit2XN
+* [lang] Draft revision of spec for modules. Test and implement.
+* [lang] Draft revision of type vs. normal name. Test and implement.
+* [prgm] Game of Life
 
 * [clean] Nicer way of printing error messages in compiler
  - particularly those that include names and types inside of them.
