--- a/langs/fble.txt
+++ b/langs/fble.txt
@@ -373,6 +373,40 @@ Or, as another example, the following two are equivalent:
 1. Bool@ True = Bool@(true: Unit@()); ...
 2. @(True: Bool@(true: Unit@())); ...
 
+3.7 String Literal
+------------------
+Concrete Syntax:
+  expr ::= expr '|' word
+
+Example:
+  IntLit|2219
+  StrLit|'hello there!'
+
+A string literal is syntactic sugar that allows you to express a raw sequence
+of data without the overhead of punctuation between data elements.
+
+The expression:
+
+  x|abcd
+
+Is desugared into the expression:
+
+  x.'::'(x.a, x.'::'(x.b, x.'::'(x.c, x.'::'(x.d, x.''))))
+
+In other words, the word literal is broken up into individual characters. Each
+character is replaced with with a struct access expression that accesses the
+field with the matching single-character name from the object. The individual
+characters are then combined using the '' field for the empty string and the
+'::' field for a function that prepends a character to a string.
+
+In the above example, assuming we are producing a literal value of type T@
+with elements E@, the type of x should contain the following fields:
+
+  @ X@ = +(E@ a, E@ b, E@ c, E@ d, T@ '', (E@, T@){T@;} '::');
+
+TODO: Integer literal is probably pretty hard to define this way. How do you
+distinguish between '0001' and '01' when prepending a '2' in front?
+
 4. Unions
 ---------
 A union value is a particular value chosen amongst a group of possible values.
@@ -943,6 +977,7 @@ expr ::=
  | '@(' [name [':' expr] [',' ...]] ')'            (* struct_value_implicit_type *)
  | expr '.' name                                   (* struct_access *)
  | expr '{' stmt '}'                               (* struct_eval *)
+ | expr '|' word                                   (* string_literal *)
 
  | '+(' type name [',' type name [...]] ')'        (* union_type *)
  | type '(' name ':' expr ')'                      (* union_value *)
